crates/caelix-macros/tests/ui/injectable_rejects_tuple_struct.stderr
error: custom attribute panicked
 --> tests/ui/injectable_rejects_tuple_struct.rs:5:1
  |
5 | #[injectable]
  | ^^^^^^^^^^^^^
  |
  = help: message: #[injectable] only supports named-field or unit structs
